Wed Jul 28 19:41:08 MEST 1999  Sven Neumann <sven@gimp.org>

	* plug-ins/common/curve_bend.c
	* plug-ins/common/sample_colorize.c
	* plug-ins/common/mkgen.pl
	* plug-ins/common/Makefile.am: added two new plug-ins coded
	by Wolfgang Hofer <hof@hotbot.com>

1999-07-28  Michael Natterer  <mitschel@cs.tu-berlin.de>

	* app/gdisplay_ops.c: tweaked one more dialog box: "Changes were
	made to %s. Close anyway?"

	* app/layers_dialog.c: Eek, layers_dialog_flush() was assuming
	that layers can be moved by one position only and thus traversed
	and reordered the same list at the same time. Should work with
	arbitrarily misplaced layers now.
	Fixed some strange dnd special cases and cleaned up the dnd code.

Wed Jul 28 03:42:34 1999  Jay Cox  (jay@elan)

	* app/pixel_regionP.h: new file that shold have gone with my last
	commit.

Tue Jul 27 22:47:33 MEST 1999  Sven Neumann <sven@gimp.org>

	* plug-ins/script-fu/script-fu-scripts.c: fixed a bug that was 
	introduced by the latest portability changes

Tue Jul 27 01:21:02 1999  Jay Cox  (jaycox@earthlink.net)

	* app/clone.c: more cursor support.
	* app/cursorutil.[ch], cursors/{bad,badmsk}: new cursor
	* app/paint_core.c: fix that rounding error the right way this time.
	* app/pixel_processor.c, app/pixel_region.c:  Lock the tiles while 
	they are being processed.  Only create new threads if the region
	being processed is large enough to warrant it.

1999-07-27  Tuomas Kuosmanen  <tigert@gimp.org>

	* pixmaps/zoom_in.xpm
	* pixmaps/zoom_out.xpm: I think the zoom buttons needed
	handles to make them easier to grab. %-)

1999-07-27  Tomas Ogren  <stric@ing.umu.se>

	* configure.in: Added 'cs' to ALL_LINGUAS

1999-07-27  Michael Natterer  <mitschel@cs.tu-berlin.de>

	* app/commands.c
	* app/desaturate.[ch]
	* app/equalize.[ch]: no need to pass the image as a void pointer
	to desaturate and equalize.

	* app/gimage.h
	* app/gimpimage.[ch]: new function gimp_image_position_layer().
